--- a/shah/translations/de_DE.json
+++ b/shah/translations/de_DE.json
@@ -7,6 +7,7 @@
   "1FAmA3": "Bewertungen",
   "2gtpRD": "Kontostand",
   "369PK3": "Mehr bekommen",
+  "2L5Kd2": "Booked",
   "3esZCn": {
     "schema.forSale": "Zum Verkauf",
     "schema.forRent": "Zu vermieten",
@@ -804,11 +805,13 @@
   "1iXhvu": "Bestätige deine Telefonnummer",
   "1OUJhq": "Geben Sie den Code ein, den wir Ihnen unten gesendet haben",
   "jNcvI": "Wir haben Ihnen einen Bestätigungscode per SMS geschickt. Bitte geben Sie es unten ein",
+  "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Konto überprüfen",
   "4hTtL9": "Überprüfen Sie Ihr Telegrammkonto",
   "2KQpoG": "Wir werden niemals in Ihrem Namen posten.",
   "2Ezyas": "Was wird auf der Blockchain sichtbar sein?",
   "44w6ur": "Ihr Telegramm-Benutzername und Ihre Konto-ID",
+  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Überprüfen Sie die Website",
   "vyn8P": "Geben Sie unten Ihre Website-URL ein",
   "2DQDJG": "Was wird auf der Blockchain sichtbar sein?",
@@ -1152,8 +1155,9 @@
   "pT9j": "Gehaltenen",
   "NrhOS": "Freigegeben",
   "QUO1v": "Menge",
-  "avBAh": "Aktueller Wert",
+  "1uAeN3": "Offer Value",
   "47deji": "Ether ist sehr volatil und sein Wert kann sich in kurzer Zeit erheblich ändern.",
+  "avBAh": "Aktueller Wert",
   "2YJu95": "Status",
   "1hYUx6": "Lern mehr",
   "4lXF0R": "Kryptowährung wird in einem Smart-Vertrag aufbewahrt, bis das Angebot zurückgezogen, abgelehnt oder die Transaktion abgeschlossen wird.",
@@ -1262,6 +1266,10 @@
   "3szOog": "Transaktionsdetails",
   "2WKBdJ": "Meine Verkäufe",
   "4sERIr": "Meine Einkäufe",
+  "4xRYON": "You haven’t bought anything yet.",
+  "2Q96aI": "Browse Listings",
+  "3rqoGs": "{time} ago",
+  "1OTyrm": "Angebot gemacht am",
   "1qsiOA": "Alle",
   "3I5PI0": "Tätig",
   "4AEwEb": "Inaktiv",
@@ -1280,7 +1288,6 @@
   "4pBht7": "Ausstehend",
   "4bm5iW": "Abgeschlossen",
   "3gzfIf": "Alle",
-  "1OTyrm": "Angebot gemacht am",
   "3E5x7N": "Ausstehend",
   "1ysFmq": "Abgeschlossen",
   "2PeXpx": "Alle",
