--- a/shah/translations/el_GR.json
+++ b/shah/translations/el_GR.json
@@ -7,6 +7,7 @@
   "1FAmA3": "Κριτικές",
   "2gtpRD": "Το υπόλοιπο του λογαριασμού",
   "369PK3": "Πάρετε περισσότερα",
+  "2L5Kd2": "Booked",
   "3esZCn": {
     "schema.forSale": "Προς πώληση",
     "schema.forRent": "Προς ενοικίαση",
@@ -804,11 +805,13 @@
   "1iXhvu": "Επαληθεύστε τον αριθμό τηλεφώνου σας",
   "1OUJhq": "Πληκτρολογήστε τον κωδικό που σας έστειλα παρακάτω",
   "jNcvI": "Σας έστειλε έναν κωδικό επαλήθευσης μέσω SMS. Πληκτρολογήστε το παρακάτω",
+  "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Επιβεβαιώστε το λογαριασμό",
   "4hTtL9": "Επαληθεύστε τον λογαριασμό τηλεγράφων σας",
   "2KQpoG": "Ποτέ δεν θα αναρτήσουμε για λογαριασμό σας.",
   "2Ezyas": "Τι θα είναι ορατό στο blockchain;",
   "44w6ur": "Το όνομα χρήστη και το αναγνωριστικό λογαριασμού του τηλεγραφήματος",
+  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Επαληθεύστε την ιστοσελίδα",
   "vyn8P": "Εισαγάγετε τη διεύθυνση URL του ιστοτόπου σας παρακάτω",
   "2DQDJG": "Τι θα είναι ορατό στο blockchain;",
@@ -1152,8 +1155,9 @@
   "pT9j": "Που πραγματοποιήθηκε",
   "NrhOS": "Κυκλοφόρησε",
   "QUO1v": "Ποσό",
-  "avBAh": "Τρέχουσα τιμή",
+  "1uAeN3": "Offer Value",
   "47deji": "Ο αιθέρας είναι εξαιρετικά ασταθής και η αξία του μπορεί να αλλάξει σημαντικά σε σύντομο χρονικό διάστημα.",
+  "avBAh": "Τρέχουσα τιμή",
   "2YJu95": "Κατάσταση",
   "1hYUx6": "Μάθε περισσότερα",
   "4lXF0R": "Το κρυπτοεγχειρίδιο πραγματοποιείται σε έξυπνη σύμβαση έως ότου η προσφορά αποσυρθεί, απορριφθεί ή ολοκληρωθεί η συναλλαγή.",
@@ -1262,6 +1266,10 @@
   "3szOog": "Λεπτομέρειες Συναλλαγής",
   "2WKBdJ": "Οι πωλήσεις μου",
   "4sERIr": "Οι αγορές μου",
+  "4xRYON": "You haven’t bought anything yet.",
+  "2Q96aI": "Browse Listings",
+  "3rqoGs": "{time} ago",
+  "1OTyrm": "Η προσφορά έγινε στις",
   "1qsiOA": "Όλες",
   "3I5PI0": "Ενεργά",
   "4AEwEb": "Ανενεργά",
@@ -1280,7 +1288,6 @@
   "4pBht7": "Σε εκκρεμότητα",
   "4bm5iW": "Ολοκληρωμένες",
   "3gzfIf": "Όλες",
-  "1OTyrm": "Η προσφορά έγινε στις",
   "3E5x7N": "Σε εκκρεμότητα",
   "1ysFmq": "Ολοκληρωμένες",
   "2PeXpx": "Όλες",
