--- a/shah/translations/es_ES.json
+++ b/shah/translations/es_ES.json
@@ -7,6 +7,7 @@
   "1FAmA3": "Comentarios",
   "2gtpRD": "Saldo de la Cuenta",
   "369PK3": "Obtener más",
+  "2L5Kd2": "Booked",
   "3esZCn": {
     "schema.forSale": "En Venta",
     "schema.forRent": "En renta",
@@ -804,11 +805,13 @@
   "1iXhvu": "Verifica tu numero de telefono",
   "1OUJhq": "Ingrese el código que le enviamos a continuación",
   "jNcvI": "Le enviamos un código de verificación por SMS. Por favor ingréselo abajo",
+  "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Verificar Cuenta",
   "4hTtL9": "Verifique su cuenta de Telegram",
   "2KQpoG": "Nunca publicaremos en su nombre.",
   "2Ezyas": "¿Qué será visible en la cadena de bloques?",
   "44w6ur": "Su nombre de usuario de Telegram y su ID de cuenta",
+  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Verificar sitio web",
   "vyn8P": "Ingrese la URL de su sitio web a continuación",
   "2DQDJG": "¿Qué será visible en la cadena de bloques?",
@@ -1152,8 +1155,9 @@
   "pT9j": "Retenida",
   "NrhOS": "Liberar",
   "QUO1v": "Cantidad",
-  "avBAh": "Valor actual",
+  "1uAeN3": "Offer Value",
   "47deji": "El éter es altamente volátil y su valor puede cambiar significativamente en un corto período de tiempo.",
+  "avBAh": "Valor actual",
   "2YJu95": "Estado",
   "1hYUx6": "Aprende más",
   "4lXF0R": "La criptomoneda se mantiene en un contrato inteligente hasta que la oferta se retira, se rechaza o se completa la transacción.",
@@ -1262,6 +1266,10 @@
   "3szOog": "Detalles de la transacción",
   "2WKBdJ": "Mis Ventas",
   "4sERIr": "Mis Compras",
+  "4xRYON": "You haven’t bought anything yet.",
+  "2Q96aI": "Browse Listings",
+  "3rqoGs": "{time} ago",
+  "1OTyrm": "Oferta hecha en",
   "1qsiOA": "Todos",
   "3I5PI0": "Activos",
   "4AEwEb": "Inactivos",
@@ -1280,7 +1288,6 @@
   "4pBht7": "Pendientes",
   "4bm5iW": "Terminado",
   "3gzfIf": "Todos",
-  "1OTyrm": "Oferta hecha en",
   "3E5x7N": "Pendientes",
   "1ysFmq": "Terminado",
   "2PeXpx": "Todos",
