--- a/shah/translations/fr_FR.json
+++ b/shah/translations/fr_FR.json
@@ -7,6 +7,7 @@
   "1FAmA3": "Commentaires",
   "2gtpRD": "Solde du compte",
   "369PK3": "Avoir plus",
+  "2L5Kd2": "Booked",
   "3esZCn": {
     "schema.forSale": "À vendre",
     "schema.forRent": "À louer",
@@ -631,8 +632,8 @@
   "2haWvO": "Gains Totaux",
   "1YUe0g": "Total gagné",
   "2tRIOg": "Aucune campagne détectée",
-  "3Dcwum": "Origin Marketplace installed",
-  "acQDS": "Completed",
+  "3Dcwum": "Origin Marketplace a été installé",
+  "acQDS": "Terminé",
   "2JJkHr": "Vous avez gagné {amount} OGN",
   "1dhANo": "Suivre Origin",
   "1RMzAE": "Retour à la campagne",
@@ -804,11 +805,13 @@
   "1iXhvu": "Vérifiez votre numéro de téléphone",
   "1OUJhq": "Entrez le code que nous vous avons envoyé ci-dessous",
   "jNcvI": "Nous vous avons envoyé un code de vérification par SMS. Veuillez l'entrer ci-dessous",
+  "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Vérifier le compte",
   "4hTtL9": "Vérifiez votre compte Telegram",
   "2KQpoG": "Nous ne posterons rien en votre nom.",
   "2Ezyas": "Qu'est-ce qui sera visible sur la blockchain?",
   "44w6ur": "ID de votre compte Telegram",
+  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Vérifiez votre site web",
   "vyn8P": "Entrez l'URL de votre site ci-dessous",
   "2DQDJG": "Qu'est-ce qui sera visible sur la blockchain?",
@@ -830,7 +833,7 @@
   "4zUJH3": "Jetons Origin insuffisants",
   "4Ed2iA": "Pas assez de jetons OKB. {=Get More}",
   "4DOKEk": "En avoir plus",
-  "3as9PZ": "Not enough Tether",
+  "3as9PZ": "Tether insuffisant",
   "49t4a6": "Solde insuffisant",
   "2t43zy": "Où puis-je en récupérer ?",
   "2nApoY": "Commission",
@@ -1141,7 +1144,7 @@
   "1kwp9A": "Serveur GraphQL",
   "1uARmt": "Serveur de clés de messagerie",
   "CekKD": "Espace de noms de messagerie",
-  "439xvd": "Auth Server",
+  "439xvd": "Serveur d'auth.",
   "28zT3p": "Mode Performances",
   "1gHMka": "Console d'Écran",
   "Dg7k9": "Comptes Proxy",
@@ -1152,8 +1155,9 @@
   "pT9j": "Détenu",
   "NrhOS": "Relâché",
   "QUO1v": "Quantité",
-  "avBAh": "Valeur Actuelle",
+  "1uAeN3": "Offer Value",
   "47deji": "L'Ether est hautement volatile et sa valeur peut changer significativement en une courte période de temps.",
+  "avBAh": "Valeur Actuelle",
   "2YJu95": "Statut",
   "1hYUx6": "En savoir plus",
   "4lXF0R": "La cryptomonnaie est détenue dans un contrat intelligent jusqu'à ce que l'offre soit rejetée, retirée, ou que la transaction soit conclue.",
@@ -1262,6 +1266,10 @@
   "3szOog": "Détails de la Transaction",
   "2WKBdJ": "Mes ventes",
   "4sERIr": "Mes achats",
+  "4xRYON": "You haven’t bought anything yet.",
+  "2Q96aI": "Browse Listings",
+  "3rqoGs": "{time} ago",
+  "1OTyrm": "Offre faite sur",
   "1qsiOA": "Tous",
   "3I5PI0": "Actives",
   "4AEwEb": "Inactives",
@@ -1280,7 +1288,6 @@
   "4pBht7": "En attente",
   "4bm5iW": "Terminé",
   "3gzfIf": "Tous",
-  "1OTyrm": "Offre faite sur",
   "3E5x7N": "En attente",
   "1ysFmq": "Terminé",
   "2PeXpx": "Tous",
@@ -1354,5 +1361,5 @@
   "3eoCca": "Maker Dai est un bon choix pour des annonces à long terme, comme des locations ou ventes de propriétés.",
   "214S0w": "Utile pour promouvoir d'autres annonces",
   "4nb5Gu": "À utiliser avec l'un de nos partenaires d'échange",
-  "21iAlm": "Tether is good for long term listings like rentals or property sales."
+  "21iAlm": "Tether est un bon choix pour des annonces à long terme, comme des locations ou ventes de propriétés."
 }
