--- a/shah/translations/hr_HR.json
+++ b/shah/translations/hr_HR.json
@@ -7,6 +7,7 @@
   "1FAmA3": "Recenzije",
   "2gtpRD": "Stanje na računu",
   "369PK3": "Dobiti više",
+  "2L5Kd2": "Booked",
   "3esZCn": {
     "schema.forSale": "Za prodaju",
     "schema.forRent": "Za najam",
@@ -804,11 +805,13 @@
   "1iXhvu": "Potvrdite svoj telefonski broj",
   "1OUJhq": "Unesite kôd koji smo vam poslali u nastavku",
   "jNcvI": "Poslali smo vam kontrolni kôd putem SMS-a. Unesite ga u nastavku",
+  "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Potvrdi Račun",
   "4hTtL9": "Potvrdite račun Telegrama",
   "2KQpoG": "Nikada nećemo objaviti u vaše ime.",
   "2Ezyas": "Što će biti vidljivo na blockchainu?",
   "44w6ur": "Vaše Telegram korisničko ime i ID računa",
+  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Provjerite web mjesto",
   "vyn8P": "U nastavku unesite URL svoje web lokacije",
   "2DQDJG": "Što će biti vidljivo na blockchainu?",
@@ -1152,8 +1155,9 @@
   "pT9j": "Održanog",
   "NrhOS": "oslobođen",
   "QUO1v": "Iznos",
-  "avBAh": "Trenutna vrijednost",
+  "1uAeN3": "Offer Value",
   "47deji": "Eter je jako hlapljiv i vrijednost se može značajno promijeniti u kratkom vremenu.",
+  "avBAh": "Trenutna vrijednost",
   "2YJu95": "Status",
   "1hYUx6": "Saznajte više",
   "4lXF0R": "Kripto valuta se drži u pametnom ugovoru sve dok ponuda ne bude povučena, odbijena ili transakcija nije dovršena.",
@@ -1262,6 +1266,10 @@
   "3szOog": "detalji transakcije",
   "2WKBdJ": "Moja prodaja",
   "4sERIr": "Moje kupnje",
+  "4xRYON": "You haven’t bought anything yet.",
+  "2Q96aI": "Browse Listings",
+  "3rqoGs": "{time} ago",
+  "1OTyrm": "Ponuda je dana",
   "1qsiOA": "svi",
   "3I5PI0": "Aktivan",
   "4AEwEb": "Neaktivan",
@@ -1280,7 +1288,6 @@
   "4pBht7": "U tijeku",
   "4bm5iW": "potpun",
   "3gzfIf": "svi",
-  "1OTyrm": "Ponuda je dana",
   "3E5x7N": "U tijeku",
   "1ysFmq": "potpun",
   "2PeXpx": "svi",
