--- a/shah/translations/id_ID.json
+++ b/shah/translations/id_ID.json
@@ -7,6 +7,7 @@
   "1FAmA3": "Ulasan",
   "2gtpRD": "Saldo Akun",
   "369PK3": "Mendapatkan lebih banyak",
+  "2L5Kd2": "Booked",
   "3esZCn": {
     "schema.forSale": "Dijual",
     "schema.forRent": "Disewakan",
@@ -804,11 +805,13 @@
   "1iXhvu": "Verifikasi Nomor Telepon Anda",
   "1OUJhq": "Masukkan kode yang kami kirimkan kepada Anda di bawah ini",
   "jNcvI": "Kami telah mengirimkan kode verifikasi kepada Anda melalui SMS. Silakan masukkan di bawah ini",
+  "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "verifikasi akun",
   "4hTtL9": "Verifikasi Akun Telegram Anda",
   "2KQpoG": "Kami tidak akan pernah memposting atas nama Anda.",
   "2Ezyas": "Apa yang akan terlihat di blockchain?",
   "44w6ur": "Nama pengguna dan ID akun Telegram Anda",
+  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Verifikasi Situs Web",
   "vyn8P": "Masukkan URL situs web Anda di bawah ini",
   "2DQDJG": "Apa yang akan terlihat di blockchain?",
@@ -1152,8 +1155,9 @@
   "pT9j": "Diadakan",
   "NrhOS": "Dirilis",
   "QUO1v": "Jumlah",
-  "avBAh": "Nilai sekarang",
+  "1uAeN3": "Offer Value",
   "47deji": "Eter sangat mudah menguap dan nilainya dapat berubah secara signifikan dalam waktu singkat.",
+  "avBAh": "Nilai sekarang",
   "2YJu95": "Status",
   "1hYUx6": "Belajarlah lagi",
   "4lXF0R": "Cryptocurrency diadakan dalam kontrak pintar hingga penawaran ditarik, ditolak, atau transaksi selesai.",
@@ -1262,6 +1266,10 @@
   "3szOog": "Detil transaksi",
   "2WKBdJ": "Penjualan Saya",
   "4sERIr": "Pembelian Saya",
+  "4xRYON": "You haven’t bought anything yet.",
+  "2Q96aI": "Browse Listings",
+  "3rqoGs": "{time} ago",
+  "1OTyrm": "Penawaran dilakukan",
   "1qsiOA": "Semua",
   "3I5PI0": "Aktif",
   "4AEwEb": "Tidak Aktif",
@@ -1280,7 +1288,6 @@
   "4pBht7": "Tertunda",
   "4bm5iW": "Selesai",
   "3gzfIf": "Semua",
-  "1OTyrm": "Penawaran dilakukan",
   "3E5x7N": "Tertunda",
   "1ysFmq": "Selesai",
   "2PeXpx": "Semua",
