--- a/shah/translations/it_IT.json
+++ b/shah/translations/it_IT.json
@@ -7,6 +7,7 @@
   "1FAmA3": "Recensioni",
   "2gtpRD": "Saldo",
   "369PK3": "Ancora",
+  "2L5Kd2": "Booked",
   "3esZCn": {
     "schema.forSale": "In vendita",
     "schema.forRent": "In Affitto",
@@ -631,8 +632,8 @@
   "2haWvO": "Guadagni totali",
   "1YUe0g": "Totale guadagnato",
   "2tRIOg": "Nessuna campagna rilevata",
-  "3Dcwum": "Origin Marketplace installed",
-  "acQDS": "Completed",
+  "3Dcwum": "Origin Marketplace installato",
+  "acQDS": "Completato",
   "2JJkHr": "Hai guadagnato {amount} OGN",
   "1dhANo": "Segui Origin",
   "1RMzAE": "Ritorno alla campagna",
@@ -804,11 +805,13 @@
   "1iXhvu": "Verifica il tuo Numero di Telefono",
   "1OUJhq": "Inserisci il codice che ti abbiamo inviato qui sotto",
   "jNcvI": "Ti abbiamo inviato un codice di verifica tramite SMS. Si prega di inserire qui sotto",
+  "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Verifica l'Account",
   "4hTtL9": "Verifica il tuo Account Telegram",
   "2KQpoG": "Non pubblicheremo mai per tuo conto.",
   "2Ezyas": "Cosa sarà visibile sulla blockchain?",
   "44w6ur": "Il tuo ID e nome utente di Telegram",
+  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Verifica il sito web",
   "vyn8P": "Inserisci l'URL del tuo sito web qui sotto",
   "2DQDJG": "Cosa sarà visibile sulla blockchain?",
@@ -830,7 +833,7 @@
   "4zUJH3": "Token Origin insufficienti",
   "4Ed2iA": "Token OKB non sufficienti. {=Get More}",
   "4DOKEk": "Ancora",
-  "3as9PZ": "Not enough Tether",
+  "3as9PZ": "Tether insufficienti",
   "49t4a6": "Saldo insufficiente",
   "2t43zy": "Dove posso trovarne?",
   "2nApoY": "Commissione",
@@ -1141,7 +1144,7 @@
   "1kwp9A": "Server GraphQL",
   "1uARmt": "Key Server per messaggistica",
   "CekKD": "Namespace di messaggistica",
-  "439xvd": "Auth Server",
+  "439xvd": "Server di autenticazione",
   "28zT3p": "Performance Mode",
   "1gHMka": "Screen Console",
   "Dg7k9": "Account proxy",
@@ -1152,8 +1155,9 @@
   "pT9j": "Trattenuto",
   "NrhOS": "Rilasciato",
   "QUO1v": "Importo",
-  "avBAh": "Valore corrente",
+  "1uAeN3": "Offer Value",
   "47deji": "Ether è altamente volatile e il suo valore può cambiare in modo significativo in un breve periodo di tempo.",
+  "avBAh": "Valore corrente",
   "2YJu95": "Stato",
   "1hYUx6": "Ulteriori informazioni",
   "4lXF0R": "Cripto-valuta viene mantenuta in uno smart-contract fino a quando l'offerta non viene ritirata, rifiutata o completata.",
@@ -1262,6 +1266,10 @@
   "3szOog": "Dettagli della Transazione",
   "2WKBdJ": "Le mie vendite",
   "4sERIr": "I miei acquisti",
+  "4xRYON": "You haven’t bought anything yet.",
+  "2Q96aI": "Browse Listings",
+  "3rqoGs": "{time} ago",
+  "1OTyrm": "Offerta fatta il",
   "1qsiOA": "Tutti",
   "3I5PI0": "Attivo",
   "4AEwEb": "Inattivo",
@@ -1280,7 +1288,6 @@
   "4pBht7": "In sospeso",
   "4bm5iW": "Completato",
   "3gzfIf": "Tutti",
-  "1OTyrm": "Offerta fatta il",
   "3E5x7N": "In sospeso",
   "1ysFmq": "Completato",
   "2PeXpx": "Tutti",
@@ -1351,8 +1358,8 @@
   "1w0kdV": "Token OKB",
   "3mFmPe": "Tether",
   "3JTZtf": "Ether è buono per le inserzioni a breve termine.",
-  "3eoCca": "Maker Dai è adatto per le inserzioni a lungo termine come affitti o vendite di proprietà.",
+  "3eoCca": "Maker Dai è una buona opzione per per gli annunci con rilascio dei fondi a lungo termine, come affitti o vendite di proprietà.",
   "214S0w": "Utile per promuovere altri annunci",
   "4nb5Gu": "Da utilizzare con uno dei nostri exchange partner",
-  "21iAlm": "Tether is good for long term listings like rentals or property sales."
+  "21iAlm": "Tether è una buona opzione per per gli annunci con rilascio dei fondi a lungo termine, come affitti o vendite di proprietà."
 }
