--- a/shah/translations/ja_JP.json
+++ b/shah/translations/ja_JP.json
@@ -7,6 +7,7 @@
   "1FAmA3": "レビュー",
   "2gtpRD": "残高",
   "369PK3": "もっと",
+  "2L5Kd2": "Booked",
   "3esZCn": {
     "schema.forSale": "販売中",
     "schema.forRent": "貸します",
@@ -804,11 +805,13 @@
   "1iXhvu": "あなたの電話番号を確認する",
   "1OUJhq": "送付されたコードを記入ください",
   "jNcvI": "SMSで確認コードを送信しました。以下に入力してください",
+  "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "アカウント を認証してください",
   "4hTtL9": "Telegramアカウントを認証してください",
   "2KQpoG": "あなたに代わって投稿することはありません。",
   "2Ezyas": "何がブロックチェーン上で表示されますか？",
   "44w6ur": "Telegramのユーザー名とアカウントID",
+  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "ウェブサイトを認証してください",
   "vyn8P": "下記にあなたのウェブサイトのURLを入力してください",
   "2DQDJG": "何がブロックチェーン上で表示されますか？",
@@ -1152,8 +1155,9 @@
   "pT9j": "開催",
   "NrhOS": "発売日",
   "QUO1v": "量",
-  "avBAh": "現在の価値",
+  "1uAeN3": "Offer Value",
   "47deji": "Ethはボラティリティが高く、その価値は短期間で大きく変わる可能性があります。",
+  "avBAh": "現在の価値",
   "2YJu95": "ステータス",
   "1hYUx6": "詳細について",
   "4lXF0R": "暗号通貨は、オファーが撤廃されるか、拒否されるか、またはトランザクションが完了するまでスマートコントラクトにエスクローされます。",
@@ -1262,6 +1266,10 @@
   "3szOog": "トランザクションの詳細",
   "2WKBdJ": "販売履歴",
   "4sERIr": "購入履歴",
+  "4xRYON": "You haven’t bought anything yet.",
+  "2Q96aI": "Browse Listings",
+  "3rqoGs": "{time} ago",
+  "1OTyrm": "で行われた申し出",
   "1qsiOA": "すべて",
   "3I5PI0": "有効",
   "4AEwEb": "無効",
@@ -1280,7 +1288,6 @@
   "4pBht7": "保留中",
   "4bm5iW": "完了",
   "3gzfIf": "すべて",
-  "1OTyrm": "で行われた申し出",
   "3E5x7N": "保留中",
   "1ysFmq": "完了",
   "2PeXpx": "すべて",
