--- a/shah/translations/nl_NL.json
+++ b/shah/translations/nl_NL.json
@@ -7,6 +7,7 @@
   "1FAmA3": "beoordelingen",
   "2gtpRD": "Saldo",
   "369PK3": "Haal meer",
+  "2L5Kd2": "Booked",
   "3esZCn": {
     "schema.forSale": "Te koop",
     "schema.forRent": "Te huur",
@@ -804,11 +805,13 @@
   "1iXhvu": "Verifieer je telefoonnummer",
   "1OUJhq": "Voer hieronder de code in die we u hebben gestuurd",
   "jNcvI": "We hebben u een verificatiecode via sms gestuurd. Voer het hieronder in",
+  "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Verifieer Account",
   "4hTtL9": "Verifieer uw Telegram-account",
   "2KQpoG": "We zullen nooit namens u posten.",
   "2Ezyas": "Wat zal zichtbaar zijn op de blockchain?",
   "44w6ur": "Uw Telegram-gebruikersnaam en account-ID",
+  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Controleer website",
   "vyn8P": "Voer hieronder uw website-URL in",
   "2DQDJG": "Wat zal zichtbaar zijn op de blockchain?",
@@ -1152,8 +1155,9 @@
   "pT9j": "Held",
   "NrhOS": "Vrijgelaten",
   "QUO1v": "Bedrag",
-  "avBAh": "Huidige waarde",
+  "1uAeN3": "Offer Value",
   "47deji": "Ether is zeer vluchtig en de waarde ervan kan aanzienlijk veranderen in een korte periode van tijd.",
+  "avBAh": "Huidige waarde",
   "2YJu95": "staat",
   "1hYUx6": "Leer meer",
   "4lXF0R": "Cryptocurrency wordt vastgehouden in een slim contract totdat het aanbod wordt ingetrokken, afgewezen of de transactie is voltooid.",
@@ -1262,6 +1266,10 @@
   "3szOog": "transactie details",
   "2WKBdJ": "Mijn verkopen",
   "4sERIr": "Mijn aankopen",
+  "4xRYON": "You haven’t bought anything yet.",
+  "2Q96aI": "Browse Listings",
+  "3rqoGs": "{time} ago",
+  "1OTyrm": "Aanbieding gedaan op",
   "1qsiOA": "Alle",
   "3I5PI0": "Actief",
   "4AEwEb": "Inactief",
@@ -1280,7 +1288,6 @@
   "4pBht7": "In afwachting",
   "4bm5iW": "Voltooid",
   "3gzfIf": "Alle",
-  "1OTyrm": "Aanbieding gedaan op",
   "3E5x7N": "In afwachting",
   "1ysFmq": "Voltooid",
   "2PeXpx": "Alle",
