--- a/shah/translations/ro_RO.json
+++ b/shah/translations/ro_RO.json
@@ -7,6 +7,7 @@
   "1FAmA3": "opinii",
   "2gtpRD": "Balanța contului",
   "369PK3": "A lua mai mult",
+  "2L5Kd2": "Booked",
   "3esZCn": {
     "schema.forSale": "De vânzare",
     "schema.forRent": "De inchiriat",
@@ -804,11 +805,13 @@
   "1iXhvu": "Verifică-ți numărul de telefon",
   "1OUJhq": "Introduceți mai jos codul pe care vi l-am trimis",
   "jNcvI": "V-am trimis un cod de verificare prin SMS. Vă rugăm să-l introduceți mai jos",
+  "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Verifica contul",
   "4hTtL9": "Verificați-vă contul Telegram",
   "2KQpoG": "Nu vom posta niciodată în numele tău.",
   "2Ezyas": "Ce va fi vizibil pe blockchain?",
   "44w6ur": "Numele de utilizator Telegram și ID-ul contului",
+  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Verificați site-ul web",
   "vyn8P": "Introdu mai jos adresa URL a site-ului",
   "2DQDJG": "Ce va fi vizibil pe blockchain?",
@@ -1152,8 +1155,9 @@
   "pT9j": "Held",
   "NrhOS": "Eliberată",
   "QUO1v": "Cantitate",
-  "avBAh": "Valoarea curentă",
+  "1uAeN3": "Offer Value",
   "47deji": "Eterul este foarte volatil, iar valoarea sa se poate schimba semnificativ într-o perioadă scurtă de timp.",
+  "avBAh": "Valoarea curentă",
   "2YJu95": "stare",
   "1hYUx6": "Aflați mai multe",
   "4lXF0R": "Cryptocurrency este păstrat într-un contract inteligent până la retragerea, respingerea sau finalizarea tranzacției.",
@@ -1262,6 +1266,10 @@
   "3szOog": "Detalii despre tranzacție",
   "2WKBdJ": "Vânzările mele",
   "4sERIr": "Achizițiile mele",
+  "4xRYON": "You haven’t bought anything yet.",
+  "2Q96aI": "Browse Listings",
+  "3rqoGs": "{time} ago",
+  "1OTyrm": "Ofertă făcută",
   "1qsiOA": "Toate",
   "3I5PI0": "Activ",
   "4AEwEb": "Inactiv",
@@ -1280,7 +1288,6 @@
   "4pBht7": "În aşteptare",
   "4bm5iW": "Finalizat",
   "3gzfIf": "Toate",
-  "1OTyrm": "Ofertă făcută",
   "3E5x7N": "În aşteptare",
   "1ysFmq": "Finalizat",
   "2PeXpx": "Toate",
