--- a/shah/translations/ru_RU.json
+++ b/shah/translations/ru_RU.json
@@ -7,6 +7,7 @@
   "1FAmA3": "Отзывы",
   "2gtpRD": "Баланс учетной записи",
   "369PK3": "Получить больше",
+  "2L5Kd2": "Booked",
   "3esZCn": {
     "schema.forSale": "Для продажи",
     "schema.forRent": "Для аренды",
@@ -631,8 +632,8 @@
   "2haWvO": "Общий заработок",
   "1YUe0g": "Всего заработано",
   "2tRIOg": "Кампании не найдены",
-  "3Dcwum": "Origin Marketplace installed",
-  "acQDS": "Completed",
+  "3Dcwum": "Origin Marketplace установлено",
+  "acQDS": "Завершено",
   "2JJkHr": "Вы заработали {amount} OGN",
   "1dhANo": "Подписаться на Origin",
   "1RMzAE": "Вернуться к Кампании",
@@ -804,11 +805,13 @@
   "1iXhvu": "Проверьте свой номер телефона",
   "1OUJhq": "Введите код, который мы отправили Вам ранее",
   "jNcvI": "Мы отправили вам код подтверждения с помощью SMS. Пожалуйста, введите его ниже",
+  "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Подтвердить аккаунт",
   "4hTtL9": "Подтвердите свою учетную запись Telegram",
   "2KQpoG": "Мы никогда не будем размещать от вашего имени.",
   "2Ezyas": "Что будет видно в блокчейне?",
   "44w6ur": "Ваши логин и ID аккаунта Telegram",
+  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Подтвердить сайт",
   "vyn8P": "Введите URL-адрес вашего сайта ниже",
   "2DQDJG": "Что будет видно на блокчейне?",
@@ -830,7 +833,7 @@
   "4zUJH3": "Недостаточно токенов Origin",
   "4Ed2iA": "Недостаточно токенов OKB. {=Get More}",
   "4DOKEk": "Получить больше",
-  "3as9PZ": "Not enough Tether",
+  "3as9PZ": "Недостаточно Tether",
   "49t4a6": "Недостаточно средств",
   "2t43zy": "Где можно купить?",
   "2nApoY": "Комиссия",
@@ -1141,7 +1144,7 @@
   "1kwp9A": "Сервер GraphQL",
   "1uARmt": "Сервер обмена сообщениями",
   "CekKD": "Пространство имен обмена сообщениями",
-  "439xvd": "Auth Server",
+  "439xvd": "Сервер аутентификации",
   "28zT3p": "Режим работы",
   "1gHMka": "Экран Консоли",
   "Dg7k9": "Прокси Аккаунты",
@@ -1152,8 +1155,9 @@
   "pT9j": "Проведён",
   "NrhOS": "Выпущен",
   "QUO1v": "Количество",
-  "avBAh": "Текущая стоимость",
+  "1uAeN3": "Offer Value",
   "47deji": "Ether очень волатилен и его стоимость может значительно измениться за короткий промежуток времени.",
+  "avBAh": "Текущая стоимость",
   "2YJu95": "Статус",
   "1hYUx6": "Узнать больше",
   "4lXF0R": "Криптовалюта находится на смарт-контракте до тех пор, пока предложение не будет отозвано, отклонено или транзакция не будет завершена.",
@@ -1262,6 +1266,10 @@
   "3szOog": "Детали транзакции",
   "2WKBdJ": "Мои продажи",
   "4sERIr": "Мои покупки",
+  "4xRYON": "You haven’t bought anything yet.",
+  "2Q96aI": "Browse Listings",
+  "3rqoGs": "{time} ago",
+  "1OTyrm": "Предложение получено",
   "1qsiOA": "Все",
   "3I5PI0": "Активный",
   "4AEwEb": "Неактивные",
@@ -1280,7 +1288,6 @@
   "4pBht7": "Ожидающие",
   "4bm5iW": "Завершенные",
   "3gzfIf": "Все",
-  "1OTyrm": "Предложение получено",
   "3E5x7N": "Ожидающие",
   "1ysFmq": "Завершенные",
   "2PeXpx": "Все",
@@ -1354,5 +1361,5 @@
   "3eoCca": "Maker DAI подходит для долгосрочных объявлений - например, аренда или продажа собственности.",
   "214S0w": "Полезно для продвижения других объявлений",
   "4nb5Gu": "Для использования одним из наших биржевых партнеров",
-  "21iAlm": "Tether is good for long term listings like rentals or property sales."
+  "21iAlm": "Tether хорош для долгосрочных сделок, таких как аренда или продажа недвижимости."
 }
