--- a/shah/translations/th_TH.json
+++ b/shah/translations/th_TH.json
@@ -7,6 +7,7 @@
   "1FAmA3": "ความคิดเห็น",
   "2gtpRD": "ยอดเงินในบัญชี",
   "369PK3": "ได้รับเพิ่มเติม",
+  "2L5Kd2": "Booked",
   "3esZCn": {
     "schema.forSale": "สำหรับขาย",
     "schema.forRent": "สำหรับเช่า",
@@ -804,11 +805,13 @@
   "1iXhvu": "ยืนยันหมายเลขโทรศัพท์ของคุณ",
   "1OUJhq": "ใส่รหัสที่เราส่งให้คุณด้านล่าง",
   "jNcvI": "เราได้ส่งรหัสยืนยันให้คุณทาง SMS กรุณาใส่มันด้านล่าง",
+  "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "ตรวจสอบบัญชี",
   "4hTtL9": "ยืนยันบัญชีโทรเลขของคุณ",
   "2KQpoG": "เราจะไม่โพสต์ในนามของคุณ",
   "2Ezyas": "สิ่งที่จะปรากฏบนบล็อกเชน",
   "44w6ur": "ชื่อผู้ใช้และ ID บัญชีโทรเลขของคุณ",
+  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "ยืนยันเว็บไซต์",
   "vyn8P": "ป้อน URL เว็บไซต์ของคุณด้านล่าง",
   "2DQDJG": "สิ่งที่จะปรากฏบนบล็อกเชน",
@@ -1152,8 +1155,9 @@
   "pT9j": "จัดขึ้น",
   "NrhOS": "การเผยแพร่",
   "QUO1v": "จำนวน",
-  "avBAh": "มูลค่าปัจจุบัน",
+  "1uAeN3": "Offer Value",
   "47deji": "อีเธอร์มีความผันผวนสูงและมูลค่าของมันสามารถเปลี่ยนแปลงได้อย่างมีนัยสำคัญในช่วงเวลาสั้น ๆ",
+  "avBAh": "มูลค่าปัจจุบัน",
   "2YJu95": "สถานะ",
   "1hYUx6": "เรียนรู้เพิ่มเติม",
   "4lXF0R": "Cryptocurrency จะถูกเก็บไว้ในสัญญาที่ชาญฉลาดจนกว่าข้อเสนอจะถูกถอนออกปฏิเสธหรือทำธุรกรรมเสร็จสมบูรณ์",
@@ -1262,6 +1266,10 @@
   "3szOog": "รายละเอียดการทำธุรกรรม",
   "2WKBdJ": "ยอดขายของฉัน",
   "4sERIr": "การซื้อของฉัน",
+  "4xRYON": "You haven’t bought anything yet.",
+  "2Q96aI": "Browse Listings",
+  "3rqoGs": "{time} ago",
+  "1OTyrm": "ทำข้อเสนอ",
   "1qsiOA": "ทั้งหมด",
   "3I5PI0": "คล่องแคล่ว",
   "4AEwEb": "เฉื่อยชา",
@@ -1280,7 +1288,6 @@
   "4pBht7": "รอดำเนินการ",
   "4bm5iW": "สมบูรณ์",
   "3gzfIf": "ทั้งหมด",
-  "1OTyrm": "ทำข้อเสนอ",
   "3E5x7N": "รอดำเนินการ",
   "1ysFmq": "สมบูรณ์",
   "2PeXpx": "ทั้งหมด",
