--- a/shah/translations/tr_TR.json
+++ b/shah/translations/tr_TR.json
@@ -7,6 +7,7 @@
   "1FAmA3": "Yorumlar",
   "2gtpRD": "Hesap bakiyesi",
   "369PK3": "Daha fazla",
+  "2L5Kd2": "Booked",
   "3esZCn": {
     "schema.forSale": "Satılık",
     "schema.forRent": "Kiralık",
@@ -632,7 +633,7 @@
   "1YUe0g": "Toplam Kazanç",
   "2tRIOg": "Kampanya tespit edilmedi",
   "3Dcwum": "Origin Marketplace installed",
-  "acQDS": "Completed",
+  "acQDS": "Tamamlandı",
   "2JJkHr": "{amount} OGN kazandınız",
   "1dhANo": "Menşei izleyin",
   "1RMzAE": "Kampanyaya Geri Dön",
@@ -804,11 +805,13 @@
   "1iXhvu": "Telefon numaranızı doğrulayın",
   "1OUJhq": "Size gönderdiğimiz kodu aşağıya girin",
   "jNcvI": "Size SMS yoluyla bir doğrulama kodu gönderdik. Lütfen aşağıya girin",
+  "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Hesabı Doğrula",
   "4hTtL9": "Telgraf Hesabınızı Doğrulayın",
   "2KQpoG": "Asla sizin adınıza göndermeyeceğiz.",
   "2Ezyas": "Blockchain üzerinde ne görünecek?",
   "44w6ur": "Telegram kullanıcı adınız ve hesap kimliğiniz",
+  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Web Sitesini Doğrula",
   "vyn8P": "Web sitenizin URL adresini aşağıya girin",
   "2DQDJG": "Blockchain üzerinde ne görünecek?",
@@ -830,7 +833,7 @@
   "4zUJH3": "Yeterli Köken Belirteçleri Yok",
   "4Ed2iA": "Yeterli OKB Jetonu yok. {=Get More}",
   "4DOKEk": "Daha fazla al",
-  "3as9PZ": "Not enough Tether",
+  "3as9PZ": "Yeterli değil",
   "49t4a6": "Yeterli bakiye yok",
   "2t43zy": "Biraz nereden bulabilirim?",
   "2nApoY": "komisyon",
@@ -1152,8 +1155,9 @@
   "pT9j": "Kavradı",
   "NrhOS": "Yayınlandı",
   "QUO1v": "Miktar",
-  "avBAh": "Mevcut değer",
+  "1uAeN3": "Offer Value",
   "47deji": "Eter oldukça uçucudur ve değeri kısa sürede önemli ölçüde değişebilir.",
+  "avBAh": "Mevcut değer",
   "2YJu95": "durum",
   "1hYUx6": "Daha fazla bilgi edin",
   "4lXF0R": "Kripto para birimi, teklif geri çekilene, reddedilene veya işlem tamamlanana kadar akıllı bir sözleşmede tutulur.",
@@ -1262,6 +1266,10 @@
   "3szOog": "ödeme detayları",
   "2WKBdJ": "Satışlarım",
   "4sERIr": "Satın alımlarım",
+  "4xRYON": "You haven’t bought anything yet.",
+  "2Q96aI": "Browse Listings",
+  "3rqoGs": "{time} ago",
+  "1OTyrm": "Yapılan teklif",
   "1qsiOA": "Herşey",
   "3I5PI0": "Aktif",
   "4AEwEb": "etkisiz",
@@ -1280,7 +1288,6 @@
   "4pBht7": "kadar",
   "4bm5iW": "Tamamlayınız",
   "3gzfIf": "Herşey",
-  "1OTyrm": "Yapılan teklif",
   "3E5x7N": "kadar",
   "1ysFmq": "Tamamlayınız",
   "2PeXpx": "Herşey",
