--- a/shah/translations/uk_UA.json
+++ b/shah/translations/uk_UA.json
@@ -7,6 +7,7 @@
   "1FAmA3": "Відгуки",
   "2gtpRD": "Баланс акаунту",
   "369PK3": "Отримати більш",
+  "2L5Kd2": "Booked",
   "3esZCn": {
     "schema.forSale": "Для продажу",
     "schema.forRent": "В оренду",
@@ -804,11 +805,13 @@
   "1iXhvu": "Перевірте свій номер телефону",
   "1OUJhq": "Введіть код, який ми вам надіслали нижче",
   "jNcvI": "Ми надіслали вам код підтвердження через SMS. Будь ласка, введіть його нижче",
+  "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Підтвердити рахунок",
   "4hTtL9": "Підтвердьте свій обліковий запис Telegram",
   "2KQpoG": "Ми ніколи не публікуємо від вашого імені.",
   "2Ezyas": "Що буде видно на блокчейні?",
   "44w6ur": "Ваше ім’я користувача та ідентифікатор облікового запису Telegram",
+  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Підтвердити веб-сайт",
   "vyn8P": "Введіть URL-адресу свого веб-сайту нижче",
   "2DQDJG": "Що буде видно на блокчейні?",
@@ -1152,8 +1155,9 @@
   "pT9j": "Відбувся",
   "NrhOS": "Випущено",
   "QUO1v": "Сума",
-  "avBAh": "Поточне значення",
+  "1uAeN3": "Offer Value",
   "47deji": "Ефір дуже мінливий і його значення може суттєво змінитися за короткий проміжок часу.",
+  "avBAh": "Поточне значення",
   "2YJu95": "Статус",
   "1hYUx6": "Вчи більше",
   "4lXF0R": "Криптовалюта утримується в розумному контракті, поки пропозиція не буде відкликана, відхилена або завершена транзакція.",
@@ -1262,6 +1266,10 @@
   "3szOog": "Інформація про транзакцію",
   "2WKBdJ": "Мої продажі",
   "4sERIr": "Мої покупки",
+  "4xRYON": "You haven’t bought anything yet.",
+  "2Q96aI": "Browse Listings",
+  "3rqoGs": "{time} ago",
+  "1OTyrm": "Пропозиція зроблена на",
   "1qsiOA": "Всі",
   "3I5PI0": "Активне",
   "4AEwEb": "Неактивне",
@@ -1280,7 +1288,6 @@
   "4pBht7": "Очікуючі",
   "4bm5iW": "Завершені",
   "3gzfIf": "Всі",
-  "1OTyrm": "Пропозиція зроблена на",
   "3E5x7N": "Очікуючі",
   "1ysFmq": "Завершені",
   "2PeXpx": "Всі",
