--- a/shah/translations/vi_VN.json
+++ b/shah/translations/vi_VN.json
@@ -7,6 +7,7 @@
   "1FAmA3": "Đánh giá",
   "2gtpRD": "Số dư tài khoản",
   "369PK3": "Chi tiết thêm",
+  "2L5Kd2": "Booked",
   "3esZCn": {
     "schema.forSale": "Để bán",
     "schema.forRent": "Cho thuê",
@@ -804,11 +805,13 @@
   "1iXhvu": "Xác minh số điện thoại của bạn",
   "1OUJhq": "Nhập mã chúng tôi đã gửi cho bạn dưới đây",
   "jNcvI": "Chúng tôi đã gửi cho bạn một mã xác minh qua SMS. Vui lòng nhập vào bên dưới",
+  "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Xác nhận tài khoản",
   "4hTtL9": "Xác minh tài khoản Telegram của bạn",
   "2KQpoG": "Chúng tôi sẽ không bao giờ gửi thay mặt bạn.",
   "2Ezyas": "Điều gì sẽ được hiển thị trên blockchain?",
   "44w6ur": "Tên người dùng và tài khoản Telegram của bạn",
+  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Xác minh trang web",
   "vyn8P": "Nhập URL trang web của bạn dưới đây",
   "2DQDJG": "Điều gì sẽ được hiển thị trên blockchain?",
@@ -1152,8 +1155,9 @@
   "pT9j": "Được tổ chức",
   "NrhOS": "Phát hành",
   "QUO1v": "Số tiền",
-  "avBAh": "Giá trị hiện tại",
+  "1uAeN3": "Offer Value",
   "47deji": "Ether rất dễ biến động và giá trị của nó có thể thay đổi đáng kể trong một khoảng thời gian ngắn.",
+  "avBAh": "Giá trị hiện tại",
   "2YJu95": "Trạng thái",
   "1hYUx6": "Tìm hiểu thêm",
   "4lXF0R": "Tiền điện tử được tổ chức trong một hợp đồng thông minh cho đến khi đề nghị được rút, từ chối hoặc giao dịch được hoàn thành.",
@@ -1262,6 +1266,10 @@
   "3szOog": "chi tiết giao dịch",
   "2WKBdJ": "Doanh số bán hàng của tôi",
   "4sERIr": "Những giao dịch của tôi",
+  "4xRYON": "You haven’t bought anything yet.",
+  "2Q96aI": "Browse Listings",
+  "3rqoGs": "{time} ago",
+  "1OTyrm": "Lệnh được thực hiện vào ngày",
   "1qsiOA": "Tất cả",
   "3I5PI0": "Hoạt động",
   "4AEwEb": "Không hoạt động",
@@ -1280,7 +1288,6 @@
   "4pBht7": "Đang chờ xử lý",
   "4bm5iW": "Hoàn thành",
   "3gzfIf": "Tất cả",
-  "1OTyrm": "Lệnh được thực hiện vào ngày",
   "3E5x7N": "Đang chờ xử lý",
   "1ysFmq": "Hoàn thành",
   "2PeXpx": "Tất cả",
