--- a/shah/translations/zh_TW.json
+++ b/shah/translations/zh_TW.json
@@ -7,6 +7,7 @@
   "1FAmA3": "評論",
   "2gtpRD": "帳戶結餘",
   "369PK3": "獲得更多",
+  "2L5Kd2": "Booked",
   "3esZCn": {
     "schema.forSale": "出售中",
     "schema.forRent": "出租",
@@ -804,11 +805,13 @@
   "1iXhvu": "驗證您的電話號碼",
   "1OUJhq": "在下面輸入我們發送給您的代碼",
   "jNcvI": "我們已通過短信發送給您驗證碼。請在下面輸入",
+  "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "驗證賬戶",
   "4hTtL9": "驗證您的電報帳戶",
   "2KQpoG": "我們將永遠不會代表您發帖。",
   "2Ezyas": "在區塊鏈上將看到什麼？",
   "44w6ur": "您的電報用戶名和帳戶ID",
+  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "驗證網站",
   "vyn8P": "在下面輸入您的網站網址",
   "2DQDJG": "在區塊鏈上將看到什麼？",
@@ -1152,8 +1155,9 @@
   "pT9j": "保持",
   "NrhOS": "已發行",
   "QUO1v": "量",
-  "avBAh": "當前值",
+  "1uAeN3": "Offer Value",
   "47deji": "醚是極易揮發的，其價值在短時間內可能會發生重大變化。",
+  "avBAh": "當前值",
   "2YJu95": "狀態",
   "1hYUx6": "學到更多",
   "4lXF0R": "加密貨幣以智能合約形式持有，直到要約被撤回，拒絕或交易完成為止。",
@@ -1262,6 +1266,10 @@
   "3szOog": "交易明細",
   "2WKBdJ": "我的銷售",
   "4sERIr": "我的購買",
+  "4xRYON": "You haven’t bought anything yet.",
+  "2Q96aI": "Browse Listings",
+  "3rqoGs": "{time} ago",
+  "1OTyrm": "優惠",
   "1qsiOA": "全部",
   "3I5PI0": "有效",
   "4AEwEb": "無效",
@@ -1280,7 +1288,6 @@
   "4pBht7": "等待中",
   "4bm5iW": "完成",
   "3gzfIf": "全部",
-  "1OTyrm": "優惠",
   "3E5x7N": "等待中",
   "1ysFmq": "完成",
   "2PeXpx": "全部",
