--- a/shah/translations/fil_PH.json
+++ b/shah/translations/fil_PH.json
@@ -7,6 +7,7 @@
   "1FAmA3": "Mga Review",
   "2gtpRD": "Balanse sa Account",
   "369PK3": "Kumuha ka pa",
+  "2L5Kd2": "Booked",
   "3esZCn": {
     "schema.forSale": "Ibinebenta",
     "schema.forRent": "Paupahan",
@@ -804,11 +805,13 @@
   "1iXhvu": "I-verify ang iyong numero ng telepono",
   "1OUJhq": "Ipasok ang code na ipinadala namin sa iyo sa ibaba",
   "jNcvI": "Nagpadala kami sa iyo ng isang verification code sa pamamagitan ng SMS. Mangyaring ipasok ito sa ibaba",
+  "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "I-verify ang Account",
   "4hTtL9": "Patunayan ang Iyong Telegram Account",
   "2KQpoG": "Hindi ka namin mai-post sa ngalan mo.",
   "2Ezyas": "Ano ang makikita sa blockchain?",
   "44w6ur": "Ang iyong Telegram username at account ID",
+  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Patunayan ang Website",
   "vyn8P": "Ipasok ang iyong URL ng website sa ibaba",
   "2DQDJG": "Ano ang makikita sa blockchain?",
@@ -1152,8 +1155,9 @@
   "pT9j": "Hinawakan",
   "NrhOS": "Pinakawalan",
   "QUO1v": "Halaga",
-  "avBAh": "Kasalukuyang Halaga",
+  "1uAeN3": "Offer Value",
   "47deji": "Si Ether ay lubos na pabagu-bago at ang halaga ay maaaring magbago nang malaki sa isang maikling panahon.",
+  "avBAh": "Kasalukuyang Halaga",
   "2YJu95": "Katayuan",
   "1hYUx6": "Matuto Nang Higit Pa",
   "4lXF0R": "Ang Cryptocurrency ay gaganapin sa isang matalinong kontrata hanggang ang pag-alok ay binawi, tanggihan, o ang transaksyon ay nakumpleto.",
@@ -1262,6 +1266,10 @@
   "3szOog": "Mga Detalye ng Transaksyon",
   "2WKBdJ": "Mga Nabenta ko",
   "4sERIr": "Mga Nabili ko",
+  "4xRYON": "You haven’t bought anything yet.",
+  "2Q96aI": "Browse Listings",
+  "3rqoGs": "{time} ago",
+  "1OTyrm": "Nagawa ang ginawa",
   "1qsiOA": "Lahat",
   "3I5PI0": "Aktibo",
   "4AEwEb": "Hindi aktibo",
@@ -1280,7 +1288,6 @@
   "4pBht7": "Nakabinbin",
   "4bm5iW": "Kumpleto",
   "3gzfIf": "Lahat",
-  "1OTyrm": "Nagawa ang ginawa",
   "3E5x7N": "Nakabinbin",
   "1ysFmq": "Kumpleto",
   "2PeXpx": "Lahat",
