--- a/shah/translations/pt_PT.json
+++ b/shah/translations/pt_PT.json
@@ -7,6 +7,7 @@
   "1FAmA3": "Rever",
   "2gtpRD": "Saldo da conta",
   "369PK3": "Pegue mais",
+  "2L5Kd2": "Booked",
   "3esZCn": {
     "schema.forSale": "Á venda",
     "schema.forRent": "Para alugar",
@@ -804,11 +805,13 @@
   "1iXhvu": "Verifique seu número de telefone",
   "1OUJhq": "Digite o código que lhe enviamos abaixo",
   "jNcvI": "Enviámos um código de verificação por SMS. Digite-o abaixo",
+  "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Verificar conta",
   "4hTtL9": "Verifique sua conta de telegrama",
   "2KQpoG": "Nós nunca publicaremos em seu nome.",
   "2Ezyas": "O que será visível na blockchain?",
   "44w6ur": "Seu nome de usuário e ID da conta do Telegram",
+  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Verificar site",
   "vyn8P": "Digite o URL do site abaixo",
   "2DQDJG": "O que será visível na blockchain?",
@@ -1152,8 +1155,9 @@
   "pT9j": "Mantido",
   "NrhOS": "Liberado",
   "QUO1v": "Montante",
-  "avBAh": "Valor atual",
+  "1uAeN3": "Offer Value",
   "47deji": "O éter é altamente volátil e seu valor pode mudar significativamente em um curto período de tempo.",
+  "avBAh": "Valor atual",
   "2YJu95": "Status",
   "1hYUx6": "Saber mais",
   "4lXF0R": "A criptomoeda é mantida em um contrato inteligente até que a oferta seja retirada, rejeitada ou a transação seja concluída.",
@@ -1262,6 +1266,10 @@
   "3szOog": "Detalhes da transação",
   "2WKBdJ": "Minhas vendas",
   "4sERIr": "Minhas compras",
+  "4xRYON": "You haven’t bought anything yet.",
+  "2Q96aI": "Browse Listings",
+  "3rqoGs": "{time} ago",
+  "1OTyrm": "Oferta feita em",
   "1qsiOA": "Todos",
   "3I5PI0": "Ativo",
   "4AEwEb": "Inativo",
@@ -1280,7 +1288,6 @@
   "4pBht7": "Pendente",
   "4bm5iW": "Concluído",
   "3gzfIf": "Todos",
-  "1OTyrm": "Oferta feita em",
   "3E5x7N": "Pendente",
   "1ysFmq": "Concluído",
   "2PeXpx": "Todos",
