--- a/shah/translations/zh_CN.json
+++ b/shah/translations/zh_CN.json
@@ -7,6 +7,7 @@
   "1FAmA3": "评论",
   "2gtpRD": "账户余额",
   "369PK3": "获取更多",
+  "2L5Kd2": "Booked",
   "3esZCn": {
     "schema.forSale": "出售",
     "schema.forRent": "出租",
@@ -804,11 +805,13 @@
   "1iXhvu": "验证您的电话号码",
   "1OUJhq": "请输入我们发送给您的验证码",
   "jNcvI": "我们已经通过短信向您发送了验证码。请在下面输入",
+  "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "验证账号",
   "4hTtL9": "验证您的电报账号",
   "2KQpoG": "我们将永远不会代表您发布",
   "2Ezyas": "区块链上会显示什么哪些数据？",
   "44w6ur": "您的Telegram账号用户名和ID",
+  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "验证您的网址",
   "vyn8P": "在下面输入你的网址",
   "2DQDJG": "区块链上会显示什么哪些数据？",
@@ -1152,8 +1155,9 @@
   "pT9j": "托管中",
   "NrhOS": "已释放",
   "QUO1v": "金额",
-  "avBAh": "现在的价值",
+  "1uAeN3": "Offer Value",
   "47deji": "以太币具有很大的波动性, 因此价值在短时间内可能会有很大的变化。",
+  "avBAh": "现在的价值",
   "2YJu95": "状态",
   "1hYUx6": "了解更多。",
   "4lXF0R": "加密货币将存放在智能合约中受托管，直到买家的出价被取消，拒绝或交易完成。",
@@ -1262,6 +1266,10 @@
   "3szOog": "交易记录状态",
   "2WKBdJ": "我的出售",
   "4sERIr": "已购商品",
+  "4xRYON": "You haven’t bought anything yet.",
+  "2Q96aI": "Browse Listings",
+  "3rqoGs": "{time} ago",
+  "1OTyrm": "出价日期",
   "1qsiOA": "所有",
   "3I5PI0": "有效的",
   "4AEwEb": "无效",
@@ -1280,7 +1288,6 @@
   "4pBht7": "等待",
   "4bm5iW": "完成",
   "3gzfIf": "所有",
-  "1OTyrm": "出价日期",
   "3E5x7N": "等待",
   "1ysFmq": "完成",
   "2PeXpx": "所有",
